add manage accounts page

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,16 @@
+.list-group-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    padding: 20px;
+}
+
+.list-group-item button {
+    width: 100px;
+}
+
+
 .form-main select
 {
     box-sizing: border-box;
