--- a/public/styles.css
+++ b/public/styles.css
@@ -15,8 +15,8 @@
         opacity:0.5 !important;
 }
 
-.little-left-margin {
-    margin-left: 20px;
+.little-right-margin {
+    margin-rigth: 50px;
 }
 .navbar-logo-img {
     margin-top: -30px !important;
