--- a/androidapp/app/src/main/res/layout/controller_newrequest.xml
+++ b/androidapp/app/src/main/res/layout/controller_newrequest.xml
@@ -8,27 +8,22 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/whats_gdpr_tv"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/whats_gdpr_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:background="@color/colorAccent"
         android:text="@string/whats_gdpr_link"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="36sp"
-        tools:text="@string/whats_gdpr_link" />
+        android:drawableRight="@drawable/ic_chevron_right_black_24dp"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="24dp"
+        app:cardCornerRadius="12dp"
         app:cardElevation="5dp">
 
         <include layout="@layout/card_content_newrequest" />
