--- a/androidapp/app/src/main/res/values/gdpr_actions.xml
+++ b/androidapp/app/src/main/res/values/gdpr_actions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string-array name="gdpr_actions">
-    <item>learn more</item>
+    <item>learn about</item>
     <item>access</item>
     <item>transfer</item>
     <item>delete</item>
