add user info screen, organize packages

--- a/androidapp/app/src/main/res/values/styles.xml
+++ b/androidapp/app/src/main/res/values/styles.xml
@@ -15,4 +15,13 @@
         <item name="background">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="MyEditTextTheme">
+        <!-- Used for the bottom line when not selected / focused -->
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlActivated">@android:color/white</item>
+        <item name="colorControlHighlight">@android:color/white</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <!-- colorControlActivated & colorControlHighlight use the colorAccent color by default -->
+    </style>
+
 </resources>
