--- a/androidapp/app/src/main/res/values/styles.xml
+++ b/androidapp/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <!-- colorControlActivated & colorControlHighlight use the colorAccent color by default -->
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
